	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.1 patched

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. tseries) use Fortran WRITE calls.  The
	Fortran output will be written to a file named 'fort.6' in the
	working directory.


BUG FIXES

    o	If a graphics window was opened in MDI mode while the console
	was zoomed, it would not be initialized properly.
    	
    	
    	
		CHANGES IN R VERSION 2.6.1


PACKAGE INSTALLATION

    o	Fortran code in packages is no longer compiled with -Wall, as
	this is not done on other platforms.


OTHERS

    o	The canvas used when plotting on a jpeg() or bmp() device with
	a transparent background (most often by copying from a screen
	device with the default transparent background) is now white
	and not grey.

    o	It seems file.access() can be unreliable both ways: that is it
	can also report that access is barred when it is not.
	(Seen on network file systems.)  So install.packages() to a
	single library no longer makes use of file.access() but checks
	directory creation instead: it is still possible that you can
	create a directory but not be allowed to create a .dll or .chm
	file, at least under Vista.

    o	When R_COMPLETION is set to FALSE, TAB is no longer ignored,
	but advances to the next tab stop in Rterm (the pre-2.5.0
	behaviour) and inserts a space in Rgui.


BUG FIXES

    o	Saving a plot to Postscript or PDF required the font database
	to have been initialized: this is now done if necessary.
	
    o	Very long file or pathnames could cause a crash if opened in
	the script editor. (PR#10402)
 
		

		CHANGES IN R VERSION 2.6.0
		
GUI CHANGES

    o	The console now handles cut and paste and mouse clicks in the
	input line in a more Windows standard way.  It also indicates
	insert and overwrite mode with different cursors.


FUNCTION CHANGES
